--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,69 @@
-# IntelliJ
+# Created by .ignore support plugin (hsz.mobi)
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+.idea/**/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
 .idea
 
-# Eclipse
-.classpath
-.project
-.settings
+project
 
-# Netbeans
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+# Sensitive or high-churn files:
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.xml
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
 
-# Build artifacts
-*.jar
-out/
-build/
-**/bin/
+# Gradle:
+.idea/**/libraries
 
-# Gradle
-.gradle
-!gradle-wrapper.jar
-local.properties
+# Mongo Explorer plugin:
+.idea/**/mongoSettings.xml
 
-# Misc
-logs/
-*.test
+## File-based project format:
+*.iws
+*.iml
 
-./config.json
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+.idea/
+
+src/test/
+.gradle/
+
+config.json
+*.iml
