--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,10 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>27.1-jre</version>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.10</version>
     </dependency>
-
     <dependency>
       <groupId>org.jdbi</groupId>
       <artifactId>jdbi3</artifactId>
